# gucharmap

./: .cvsignore  .gitignore  .gitlab-ci.yml  COPYING  COPYING.LIB  ChangeLog  ChangeLog.README  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  bootstrap  charmap.c  charmap.h  configure.ac  extract_unihan.sh  generate_unicode_stuff.sh  gucharmap-2.pc.in  gucharmap.desktop.in  gucharmap.desktop.in.in  gucharmap.doap  gucharmap.nsi.in  gucharmap.pc.in  gucharmap.schemas.in  gucharmap_intl.c  main.c  meson.build  meson_options.txt  tabulus.c  tabulus.h  unicode_data.c  unicode_info.c  unicode_info.h  unicode_names.c  unicode_names.h
.gitlab-ci/: make-release.sh  unicode-data.sh
bindings/: Makefile.am
bindings/python/: Makefile.am  gucharmap.defs
data/: Makefile.am  gucharmap.appdata.xml.in  gucharmap.desktop.in.in  gucharmap.metainfo.xml.in  meson.build
docs/: Makefile.am
docs/reference/: Makefile.am  gucharmap-docs.sgml  gucharmap-sections.txt  gucharmap.types  meson.build
docs/reference/tmpl/: gucharmap-block-chapters-model.sgml  gucharmap-block-codepoint-list.sgml  gucharmap-chapters-model.sgml  gucharmap-chapters-view.sgml  gucharmap-charmap.sgml  gucharmap-chartable.sgml  gucharmap-codepoint-list.sgml  gucharmap-script-chapters-model.sgml  gucharmap-script-codepoint-list.sgml  gucharmap-unicode-info.sgml  gucharmap-unused.sgml  gucharmap.sgml
gucharmap/: .cvsignore  Gucharmap-2.90.metadata  Makefile.am  charcell_accessible.c  charcell_accessible.h  charmap.c  charmap.h  chartable.c  chartable.h  chartable_accessible.c  chartable_accessible.h  disclosure-widget.c  disclosure-widget.h  download-unicode-files.sh  gen-guch-unicode-tables.pl  generate_unicode_stuff.sh  gucharmap-block-chapters-model.c  gucharmap-block-chapters-model.h  gucharmap-block-chapters.c  gucharmap-block-chapters.h  gucharmap-block-codepoint-list.c  gucharmap-block-codepoint-list.h  gucharmap-chapters-model.c  gucharmap-chapters-model.h  gucharmap-chapters-view.c  gucharmap-chapters-view.h  gucharmap-chapters.c  gucharmap-chapters.h  gucharmap-charmap.c  gucharmap-charmap.h  gucharmap-chartable-accessible.c  gucharmap-chartable-accessible.h  gucharmap-chartable-cell-accessible.c  gucharmap-chartable-cell-accessible.h  gucharmap-chartable-private.h  gucharmap-chartable.c  gucharmap-chartable.h  gucharmap-codepoint-list.c  gucharmap-codepoint-list.h  gucharmap-init.c  (+63 more)
gucharmap/unicode/: .cvsignore  Makefile.am  generate_categories.pl  generate_nameslist.c  generate_unihan.c  generator.sh  unicode_blocks.cI  unicode_categories.cI  unicode_data.cI  unicode_nameslist.cI  unicode_unihan.cI
help/: ChangeLog  ChangeLog.pre-2-23  LINGUAS  Makefile.am  meson.build
help/C/: .cvsignore  Makefile.am  gucharmap-C.omf  gucharmap.xml  index.docbook  l10n.txt
help/ca/: ca.po
help/cs/: cs.po
help/de/: .cvsignore  Makefile.am  de.po  gucharmap-de.omf  gucharmap.xml  legal.xml
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: .cvsignore  Makefile.am  es.po  gucharmap-es.omf  gucharmap.xml
help/eu/: Makefile.am  gucharmap-eu.omf  gucharmap.xml  legal.xml
help/fi/: .cvsignore  fi.po
help/fr/: .cvsignore  Makefile.am  fr.po  gucharmap-fr.omf  gucharmap.xml  legal.xml
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: .cvsignore  Makefile.am  gucharmap.xml  legal.xml
help/ja/: .cvsignore  Makefile.am  gucharmap.xml  legal.xml
help/kk/: kk.po
help/ko/: .cvsignore  Makefile.am  gucharmap-ko.omf  gucharmap.xml  ko.po  legal.xml
help/oc/: oc.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: .cvsignore  ru.po
help/sr/: sr.po
help/sv/: .cvsignore  Makefile.am  gucharmap-sv.omf  gucharmap.xml  legal.xml  sv.po
help/uk/: uk.po
help/vi/: vi.po
help/zh_CN/: .cvsignore  Makefile.am  gucharmap-zh_CN.omf  gucharmap.xml  legal.xml
help/zh_HK/: .cvsignore  Makefile.am  gucharmap.xml  legal.xml
help/zh_TW/: .cvsignore  Makefile.am  gucharmap.xml
pixmaps/: Makefile.am
po/: .cvsignore  ChangeLog  ChangeLog.pre-2-23  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  README  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  (+64 more)
src/: .cvsignore  Makefile.am  charcell_accessible.c  charcell_accessible.h  charmap.c  charmap.h  chartable_accessible.c  chartable_accessible.h  disclosure-widget.c  generate_nameslist.c  generate_unicode_stuff.sh  generate_unihan.c  gucharmap_intl.h  gucharmap_marshal.list  main.c  mini_fontsel.c  mini_fontsel.h  unicode_data.c  unicode_info.c  unicode_info.h  unihan.c
